# pulseboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pytest.ini
docs/: api-reference.md  architecture.md  code-walkthrough.md  database-design.md  deployment.md  design-patterns.md  flow-diagrams.md  frontend-architecture.md  high-level-design.md  interview-guide.md  low-level-design.md  role-permissions.md  system-design.md  validation-security.md
docs/adr/: 0001-consolidate-microservices.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
services/: docker-entrypoint.sh  seed.py
services/community/: Dockerfile  requirements.txt
services/core/: Dockerfile  requirements.txt
services/gateway/: Dockerfile  (+1 more)
services/shared/: pyproject.toml
services/shared/shared/: __init__.py
services/shared/shared/core/: __init__.py  auth_helpers.py  config.py  database.py  events.py  logging.py  rate_limit.py  redis.py  security.py  security_headers.py
services/shared/shared/models/: __init__.py  attachment.py  audit_log.py  base.py  category.py  chat.py  friendship.py  notification.py  oauth_account.py  post.py  tag.py  thread.py  user.py  vote.py
services/shared/shared/schemas/: __init__.py  admin.py  auth.py  category.py  chat.py  notification.py  post.py  search.py  tag.py  thread.py  upload.py  user.py  vote.py
services/shared/shared/services/: __init__.py  attachments.py  audit.py  bot.py  email.py  mentions.py  moderation.py  notifications.py  sanitize.py  storage.py
(+59 files in other folders)
