[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pulseboard-shared"
version = "0.1.0"
description = "Shared models, schemas, and utilities for PulseBoard microservices"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "redis>=5.0.0",
    "email-validator>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]
